Criação da Tela Login
Criação da tela de login flexível tanto para Desktop quanto Mobile. Utilização do NextAuth de forma "provisória" pois ainda não foi integrada com a API Java. Testes não foram realizados.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["./src/*"]
     }
+
   }
 }
