--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.13",
+    "@types/node": "22.13.17",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.2",
     "eslint": "^9",
