--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-conselho",
+  "name": "y",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.7",
+    "@radix-ui/react-switch": "^1.1.3",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
@@ -34,5 +35,9 @@
     "eslint-config-next": "15.2.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.13"
-  }
+  },
+  "description": "O conselho do Estudante é uma aplicação Web responsiva para todos os dispositivos, com foco principal para a versão **Desktop** e em secundário para **celulares**. Esse projeto foi solicitado pela equipe pedagógica da instituição com ínicio do desenvolvimento em Fevereiro de 2025 e conclusão estima em Abril do mesmo ano.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
