--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.7",
-    "embla-carousel-react": "^8.6.0",
     "@radix-ui/react-switch": "^1.1.3",
+    "chart.js": "^4.4.9",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-password-checklist": "^1.8.1"
