--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@chakra-ui/react": "^3.12.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.7",
-    "embla-carousel-react": "^8.6.0",
     "@radix-ui/react-switch": "^1.1.3",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
@@ -24,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-password-checklist": "^1.8.1"
   },
   "devDependencies": {
